--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
             showocean: true,
             oceancolor: 'rgb(204, 230, 255)'
           },
-          margin: { t: 60, b: 30, l: 10, r: 10 },
+          margin: { t: 60, b: 60, l: 10, r: 10 },
           annotations: [{
             text: `Total sequences mapped: ${Object.values(countryCounts).reduce((a, b) => a + b, 0).toLocaleString()}`,
             showarrow: false,
             xref: "paper", yref: "paper",
-            x: 0.5, y: -0.05, xanchor: 'center', yanchor: 'top',
+            x: 0.5, y: -0.08, xanchor: 'center', yanchor: 'top',
             font: { size: 12, color: '#666' }
           }]
         };
@@ -288,7 +288,7 @@
         const totalSequences = totalCountsData.reduce((a, b) => a + b, 0);
         const layout = {
           title: {
-            text: `Monthly ${pathogen.displayName} Sequence Submissions<br><sub>August 2024 - June 2025</sub>`,
+            text: `Monthly ${pathogen.displayName} Sequence Submissions<br><sub>Since August 2025</sub>`,
             font: { size: 16, color: '#333' },
             x: 0.5,
             xanchor: 'center'
@@ -310,9 +310,9 @@
             orientation: "h",
             x: 0.5,
             xanchor: 'center',
-            y: -0.15
+            y: -0.3,
           },
-          margin: { t: 80, b: 120, l: 70, r: 20 },
+          margin: { t: 80, b: 100, l: 70, r: 20 },
           plot_bgcolor: 'rgba(0,0,0,0)',
           annotations: [{
             text: `Total: ${totalSequences.toLocaleString()} sequences`,
@@ -397,7 +397,7 @@
             x: 0.5,
             xanchor: 'center'
           },
-          margin: { l: 20, r: 20, b: 40, t: 80 },
+          margin: { l: 20, r: 20, b: 80, t: 80 },
           annotations: [{
             text: `Total: ${totalSeqs.toLocaleString()} sequences<br>INSDC: ${((insdcCount / totalSeqs) * 100).toFixed(1)}% | Direct: ${((directTotalCount / totalSeqs) * 100).toFixed(1)}%<br>Restricted: ${((totalRestrictedCount / totalSeqs) * 100).toFixed(1)}%`,
             showarrow: false,
