--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pathogen Sequence Data Dashboard (2024-08 to 2025-06)</title>
+    <title>Pathoplexus Data Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-3.0.1.min.js"></script>
     <style>
       body {
@@ -108,7 +108,7 @@
   </head>
 
   <body>
-    <h1>Pathogen Sequence Data Dashboard</h1>
+    <h1>Pathoplexus Data Dashboard</h1>
     <div id="dashboard-container"></div>
 
     <script>
